apps/juiceshop/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: juiceshop
  annotations:
    argocd.argoproj.io/sync-wave: "1"
