apps/juiceshop/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: juice-shop
  namespace: juiceshop
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  template:
    metadata:
      labels:
        app: juice-shop
    spec:
      containers:
      - name: juice-shop
        image: bkimminich/juice-shop:latest
        ports:
        - containerPort: 3000
  selector:
    matchLabels:
      app: juice-shop
